--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "This is a portfolio website built with HTML, CSS, and JavaScript, showcasing my work. It includes sections for an introduction, about me, projects, certifications, and a contact form.",
   "main": "index.js",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview"
-},
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@splidejs/splide": "^4.1.4"
+    "sharp": "^0.34.2",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "vite": "^6.3.5"
