Gitflow rsync updates

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,12 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
+    env:
+      SSH_USER: ${{ secrets.SSH_USER }}
+      SSH_HOST: ${{ secrets.SSH_HOST }}
+      SSH_PORT: 18765
+      SSH_TARGET_DIR: ${{ secrets.SSH_TARGET_DIR }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -21,12 +27,11 @@ jobs:
         run: |
           npm run build
 
-      - name: Copy files via SSH
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE }}
-          source: "dist/*"
-          target: ${{ secrets.SSH_TARGET_DIR }}
-
+      - name: Upload with rsync
+        run: |
+          set -e
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -p $SSH_PORT $SSH_HOST >> ~/.ssh/known_hosts
+          rsync -avHP -e "ssh -i ~/.ssh/id_rsa -p $SSH_PORT" dist/* $SSH_USER@$SSH_HOST:$SSH_TARGET_DIR
